# jitr

./: .gitignore  CHANGELOG.rst  CITATION.cff  LICENSE  README.md  SUMMARY.md  SUPPORT.rst  core_solver_jax.py  index.md  jitrbandsdk.md  mkdocs.yml  pyproject.toml  requirements.txt  rmatrix_bloch_se.py
.github/: copilot-instructions.md  lsp.json
.github/workflows/: docs.yml  formatter.yml  gh-pages.yml  pypi-publish.yml  python-package.yml
api/compute/: compute.md
api/configuration/: config.md
api/data/: data.md
api/jitr/: data.md
api/jitr/xs/: index.md
api/reaction/: elastic.md  quasielastic_pn.md
api/visualization/: visualize.md
assets/: jitr_logo.ipynb
docs/: advanced-users.md  conf.py  contributing.md  gen_api_docs.py  getting-started.md  index.md  regression-tests.md  tests.md
docs/api/: core.md  folding.md  index.md  optical-potentials.md  quadrature.md  reaction.md  reactions.md  rmatrix.md  xs.md
docs/api/jitr/optical_potentials/: index.md
docs/api/jitr/quadrature/: index.md
docs/api/jitr/reactions/: index.md
docs/api/jitr/rmatrix/: index.md
docs/api/jitr/utils/: index.md
docs/examples/: first-elastic-scattering.md  index.md  optical-potentials-and-observables.md  uncertainty-propagation.md
docs/examples/notebooks/: builtin_omps_uq.ipynb  chex_qepn_xs.txt  chuq_kduq_comp.ipynb  integration.ipynb  mass_exploration.ipynb  rose_vs_jitr_validation_nPb.ipynb  rose_vs_jitr_validation_pCa.ipynb  test_coupled_single_dwba.ipynb
docs/theory/: implementation.md  rmatrix.md
examples/: CHEX_Ca48_demo.ipynb  ELM_calibration.ipynb  Untitled.ipynb  coupled.py  coupled_single_dwba_checks.ipynb  coupled_vs_local_checks.ipynb  integration.ipynb  local.py  nonlocal.py  quickstart_example.py  readme_example.ipynb  readme_example.py  user_defined_parameter_array.ipynb  user_defined_parameter_array.py  wavefunctions.ipynb
examples/chex_benchmark_results/CEResults/: ChargeExchangeCS.txt  InNucleonBoundWF.txt  InNucleonElasticCS.txt  InNucleonRatioToRuth.txt  InNucleonScatWFs.txt  KD_pot.txt  OutNucleonBoundWF.txt  OutNucleonElasticCS.txt  OutNucleonRatioToRuth.txt  OutNucleonScatWFs.txt
examples/chex_benchmark_results/ca48_25MeV_pn/: ChargeExchangeCS.txt  InNucleonBoundWF.txt  InNucleonElasticCS.txt  InNucleonRatioToRuth.txt  InNucleonScatWFs.txt  KD_pot.txt  OutNucleonElasticCS.txt  OutNucleonScatWFs.txt
examples/chex_benchmark_results/ca48_25MeV_pn/CEResults/: ChargeExchangeCS.txt  InNucleonBoundWF.txt  InNucleonElasticCS.txt  InNucleonRatioToRuth.txt  OutNucleonBoundWF.txt  OutNucleonElasticCS.txt
examples/notebooks/: CHEX_Ca48_demo.ipynb  Comparison_to_Runge_Kutta.ipynb  Coupled_channels_0s_example.ipynb  Reaction.ipynb  Untitled.ipynb  alpha_ca48_ratio_ruth.txt  angular_reaction_xs.ipynb  builtin_omps.ipynb  builtin_omps_uq.ipynb  channels.ipynb  channels_with_corex.ipynb  chex_jitr_validation.ipynb  chuq_kduq_comp.ipynb  chuq_wlh_kduq_comp.ipynb  comparison_to_Runge_Kutta.ipynb  convergence_channel_radius.ipynb  coupled_single_dwba_checks.ipynb  diffraction.pgf  dispersive_optical_model.ipynb  example_jlm.ipynb  how_to_define_your_interaction.ipynb  integration.ipynb  iron54_ay.pgf  iron54_central.pgf  iron54_diffxs.pgf  iron54_so.pgf  kduq_cross_section_uq_tutorial.ipynb  kduq_uq_demo.ipynb  local_omp_demo.ipynb  manual_system_specification_demo.ipynb  mass_exploration.ipynb  quickstart.ipynb  reaction.ipynb  requirements.txt  rose_vs_jitr_validation.ipynb  rose_vs_jitr_validation_nPb.ipynb  rose_vs_jitr_validation_pCa.ipynb  solver.pkl  tabulated_density_demo.ipynb  test_ay.ipynb  (+10 more)
src/: jax_rmatrix.py
src/data/: CH89_default.json
src/house_r_matrix/: cc_asymptotics.py  cc_constants.py  cc_couplings.py  core_solver_jax.py  jax_solver.py  jupyter_test.ipynb  kernel.py  notebook_core_solver_example.ipynb  quadrature.py  radial_interactions.py  rmatrix.py  sampling.py  spin_projections.py
src/jitr/: __init__.py  _types.py  channel.py  data.py  kernel.py  potentials.py  quadrature.py  rmatrix.py  rmatrix_kernel.py  rmatrix_solver.py  system.py  utils.py
src/jitr/data/: __init__.py  data.py  structure.py
src/jitr/folding/: README.md  __init__.py  density.py  folding.py  jlm.py  nuclear_matter_self_energy.py
src/jitr/optical_potentials/: __init__.py  chuq.py  dispersion.py  dom.py  kduq.py  omp.py  potential_forms.py  wlh.py
src/jitr/quadrature/: __init__.py  kernel.py  quadrature.py
src/jitr/reactions/: __init__.py  channel.py  channel_on_grid.py  channels.py  kduq.py  potentials.py  reaction.py  system.py  wavefunction.py  wlh.py
src/jitr/rmatrix/: __init__.py  core.py  rmatrix.py  rmatrix_solver.py
src/jitr/structure/: structure.py
src/jitr/utils/: __init__.py  am_utils.py  angular_momentum.py  constants.py  coupling.py  density.py  free_solutions.py  kinematics.py  mass.py  poly.py  utils.py
src/jitr/xs/: __init__.py  elastic.py  pn.py  quasielastic_pn.py
src/lagrange_rmatrix/: __init__.py  bloch_se.py  channel.py  lagrange_rmatrix.py  potentials.py  rmatrix_kernel.py  rmatrix_solver.py  system.py  utils.py
test/: test_coupled_single_dwba.py  test_integration.py  test_kinematics.py  test_local.py  test_wavefunction.py
tests/: __init__.py  test_coupled_single_dwba.py  test_density_utils.py  test_dom_dispersion.py  test_dom_model.py  test_ilda.py  test_integration.py  test_jlm_optical.py  test_kinematics.py  test_local.py  test_optical_potential_helpers.py  test_poly.py  test_wavefunction.py  test_xs_optional_spin_orbit.py
tests/regression/: README.md  __init__.py  _builders.py  _readers.py  conftest.py  manifest.json  test_regression.py  test_talys_reference.py
tests/regression/frescox/: README.md
tests/regression/talys/: README.md
(+1868 files in other folders)
