[build-system]
requires = ["setuptools>=61.0", "setuptools_scm[toml]>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "jitr"
authors = [
  {name="Kyle Beyer", email="beyerk@frib.msu.edu"}
]
description = "Calculable R-matrix solver for quantum scattering using just-in-time compilation for performance."
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.10"
dynamic = ["dependencies", "version"]
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.optional-dependencies]
docs = [
    "mkdocs>=1.5.3",
    "mkdocs-material>=9.5.3",
    "mkdocstrings>=0.24.0",
    "mkdocs-jupyter>=0.24.7",
    "pymdown-extensions>=10.0.1",
]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[tool.setuptools_scm]
write_to = "src/jitr/__version__.py"
